--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </script>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
+    <link rel="icon" type="" href="./src/assets/android-chrome-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mustafa Portfolio</title>
   </head>
