--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <script>
-    (function () {
-      const theme = localStorage.getItem("theme");
-      if (
-        theme === "dark" ||
-        (!theme && window.matchMedia("(prefers-color-scheme: dark)").matches)
-      ) {
-        document.documentElement.classList.add("dark");
-      } else {
-        document.documentElement.classList.remove("dark");
-      }
-    })();
-  </script>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="./src/assets/android-chrome-512x512.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./src/assets/android-chrome-512x512.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mustafa Portfolio</title>
+
+    <!-- Theme script must be in head so it runs before rendering -->
+    <script>
+      (function () {
+        const theme = localStorage.getItem("theme");
+        if (
+          theme === "dark" ||
+          (!theme && window.matchMedia("(prefers-color-scheme: dark)").matches)
+        ) {
+          document.documentElement.classList.add("dark");
+        } else {
+          document.documentElement.classList.remove("dark");
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
